@@ -5,7 +5,7 @@
 
 #include <testfwk.h>
 
-#if defined(__SDCC_pdk13) || defined(__SDCC_pdk14) // Lack of memory.
+#if !defined(__SDCC_pdk13) && !defined(__SDCC_pdk14) // Lack of memory.
 unsigned long long f0(unsigned long long i)
 {
 	return (i / ((1ull << 16) | (1ull << 48)));
@@ -19,7 +19,7 @@ long long f1(long long i)
 
 void testBug(void)
 {
-#if defined(__SDCC_pdk13) || defined(__SDCC_pdk14) // Lack of memory.
+#if !defined(__SDCC_pdk13) && !defined(__SDCC_pdk14) // Lack of memory.
 	ASSERT (f0((1ull << 16) | (1ull << 48)) == 1);
 	ASSERT (f1(0x080000000ll) == -1);
 #endif
