@@ -1,3 +1,15 @@
+2024-01-12 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mos6502/gen.c:
+	  Fix mos6502 part of bug #3814.
+	* sdas/astlcs90/t90mch.c:
+	  Fix bug #3815.
+
+2024-01-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3601.c:
+	  Commit fix for typo in disabling of test for low-memory devices.
+
 2024-01-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCicode.c,
